--- a/AICS prac 1.ipynb
+++ b/AICS prac 1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFvoWi/kg1BsyWNm2NMBAz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,26 +27,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fY3Otv3WcReh",
-        "outputId": "3d7ea0d3-7276-46f2-aa4f-bc7ec19a5887"
+        "outputId": "c872a9ea-8f6d-4bb1-e57b-fb1287307788"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 5, 6, 8, 9]\n"
+            "[1, 5, 8, 9]\n"
           ]
         }
       ],
       "source": [
         "l=[8,5,1,6]\n",
         "l.append(9)\n",
+        "l.remove(6)\n",
         "l.sort()\n",
         "print(l)"
       ]
@@ -55,38 +55,34 @@
     {
       "cell_type": "code",
       "source": [
-        "dict={'a':'apple','b':'ball'}\n",
+        "dict={1:'apple',2:'ball'}\n",
         "dict['c']='cat'\n",
         "print(dict)\n",
-        "print(dict['a'])"
+        "print(dict[1])\n",
+        "dict.pop('c')\n",
+        "print(dict.items())\n",
+        "print(dict.keys())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2pP8OExlc4a5",
-        "outputId": "4545241e-8cf0-4e28-e82d-8e362bcaf00e"
+        "outputId": "a4d37c76-117f-462c-8acb-1c70eb823929"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'a': 'apple', 'b': 'ball', 'c': 'cat'}\n",
-            "apple\n"
+            "{1: 'apple', 2: 'ball', 'c': 'cat'}\n",
+            "apple\n",
+            "dict_items([(1, 'apple'), (2, 'ball')])\n",
+            "dict_keys([1, 2])\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "j0zL-zPWd2WO"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
