--- a/AICS Prac 2.ipynb
+++ b/AICS Prac 2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCiAQFAuVPdh5FNpKus0JX",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPH4zNPZcXi3tGNwc61kmjm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +48,6 @@
       ],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
         "from sklearn import linear_model\n",
         "import matplotlib.pyplot as plt\n",
         "from google.colab import drive \n",
@@ -482,23 +482,23 @@
       "cell_type": "code",
       "source": [
         "x = float(input(\"Enter Number of Years to predict Salary: \"))\n",
-        "print(\"Expected Salary is \"+str(float(model.predict([[x]]))))"
+        "print(\"Expected Salary is\",float(model.predict([[x]])))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fMTQ8d1K2LMR",
-        "outputId": "40f9566d-e632-4f0e-85f9-5032b73f5faa"
+        "outputId": "eba8d555-0b6b-4687-fedd-b1435094f1e9"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter Number of Years to predict Salary: 5.2\n",
-            "Expected Salary is 74932.00427023509\n"
+            "Enter Number of Years to predict Salary: 5.5\n",
+            "Expected Salary is 77766.99296667162\n"
           ]
         }
       ]
